# iced

./: README.md  pyproject.toml
src/: burgers.py  iced.py  read_matlab_table.py  solvers.py  weno_coefficients.py
src/iced/: __init__.py
